--- a/styles/weather.scss
+++ b/styles/weather.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url("/images/day-background.jpg") no-repeat top center fixed;
+  background: url("/images/main-background.jpg") no-repeat top center fixed;
   background-size: cover;
 }
 
