--- a/styles/themeprovider/_colors.scss
+++ b/styles/themeprovider/_colors.scss
@@ -5,6 +5,7 @@ $gray-color: #555555;
 $orange-color: #fc6042;
 $light-orange-color: #fd8068;
 $light-blue-color: #81b7e4;
+$lighter-blue-color: hsl(201, 87%, 83%);
 $dark-sky-blue-color: #184059;
 $transparent-light-sky-blue-color: hsla(182, 13%, 42%, 0.7);
 $transparent-dark-sky-blue-color: hsla(202, 58%, 22%, 0.75);
