--- a/styles/weather.scss
+++ b/styles/weather.scss
@@ -306,6 +306,57 @@ body {
       }
     }
   }
+
+  .section-three {
+    margin-top: 2.5em;
+
+    .swiper {
+      width: 100%;
+      height: 100%;
+
+      .swiper-wrapper {
+        .swiper-slide {
+          background: theme.$lighter-blue-color;
+          border-radius: 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+          padding: 0.5em;
+
+          p {
+            color: theme.$black-color;
+            font-family: "Poppins", sans-serif;
+            font-size: 0.95rem;
+
+            &:nth-of-type(3) {
+              font-size: 1.4rem;
+            }
+
+            &:last-of-type {
+              font-size: 0.8rem;
+            }
+          }
+
+          img {
+            width: 4em;
+          }
+        }
+      }
+
+      .swiper-button-next {
+        color: theme.$dark-sky-blue-color;
+        transform: scale(0.85);
+        font-weight: 700;
+      }
+
+      .swiper-button-prev {
+        color: theme.$dark-sky-blue-color;
+        transform: scale(0.85);
+        font-weight: 700;
+      }
+    }
+  }
 }
 
 .no-display {
