--- a/output/weather.css
+++ b/output/weather.css
@@ -310,6 +310,22 @@ body {
   transform: scale(0.85);
   font-weight: 700;
 }
+.weather-card .section-four .air-quality-index {
+  border-radius: 5px;
+  padding: 1em;
+  width: min(13em, 95%);
+  margin: 2em auto 0em auto;
+}
+.weather-card .section-four .air-quality-index p:first-of-type {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.85rem;
+  font-weight: 400;
+}
+.weather-card .section-four .air-quality-index p:last-of-type {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.35rem;
+}
 
 .no-display {
   display: none;
