--- a/styles/themeprovider/_colors.scss
+++ b/styles/themeprovider/_colors.scss
@@ -7,6 +7,8 @@ $light-orange-color: #fd8068;
 $light-blue-color: #81b7e4;
 $lighter-blue-color: hsl(201, 87%, 83%);
 $dark-sky-blue-color: #184059;
+$dark-blue-color: #18425a;
+$slightly-dark-blue-color: hsl(202, 58%, 32%);
 $transparent-light-sky-blue-color: hsla(182, 13%, 42%, 0.7);
 $transparent-dark-sky-blue-color: hsla(202, 58%, 22%, 0.75);
 $transparent-dark-purple-color: hsla(254, 14%, 31%, 0.75);
