--- a/styles/weather.scss
+++ b/styles/weather.scss
@@ -17,19 +17,21 @@ body {
 
   a {
     text-decoration: none;
-    color: theme.$dark-sky-blue-color;
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
+    background: theme.$dark-blue-color;
+    color: theme.$white-color;
+    padding: 0.4em;
+    font-size: 1.25rem;
+    border-radius: 5px;
 
     &:hover {
-      text-decoration: underline;
+      background: theme.$slightly-dark-blue-color;
     }
   }
 
   form {
     display: flex;
     flex-direction: column;
-    margin-top: 0.5em;
+    margin-top: 1.3em;
 
     input {
       width: 100%;
