Adjusted styling on input section

--- a/styles/themeprovider/_colors.scss
+++ b/styles/themeprovider/_colors.scss
@@ -1,7 +1,7 @@
 $white-color: #ffffff;
 $black-color: #000000;
 $silver-color: #daf3f7;
-$gray-color: #555555;
+$gray-color: hsl(0, 0%, 60%);
 $orange-color: #fc6042;
 $light-orange-color: #fd8068;
 $light-blue-color: #81b7e4;
