--- a/output/weather.css
+++ b/output/weather.css
@@ -11,7 +11,7 @@ body {
 
 .input-section {
   width: min(85%, 45em);
-  margin: 2em auto;
+  margin: 2.2em auto 2em auto;
 }
 .input-section a {
   text-decoration: none;
@@ -27,14 +27,14 @@ body {
 .input-section form {
   display: flex;
   flex-direction: column;
-  margin-top: 1.3em;
+  margin-top: 1.35em;
 }
 .input-section form input {
   width: 100%;
   font-family: "Poppins", sans-serif;
-  font-size: 0.9rem;
-  font-weight: 700;
-  padding: 1em;
+  font-size: 1.05rem;
+  font-weight: 400;
+  padding: 0.75em 1em;
   border: none;
   border-radius: 5px;
 }
@@ -45,7 +45,7 @@ body {
 .input-section form input::placeholder {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  color: #555555;
+  color: hsl(0, 0%, 60%);
 }
 .input-section form button {
   font-family: "Poppins", sans-serif;
@@ -334,13 +334,6 @@ body {
 }
 
 @media (min-width: 46em) {
-  .input-section form {
-    flex-direction: row;
-  }
-  .input-section form button {
-    margin-left: 0.8em;
-    margin-top: 0;
-  }
   .weather-card .section-one {
     flex-direction: row;
     justify-content: space-between;
@@ -356,6 +349,13 @@ body {
   }
 }
 @media (min-width: 38em) {
+  .input-section form {
+    flex-direction: row;
+  }
+  .input-section form button {
+    margin-left: 0.8em;
+    margin-top: 0;
+  }
   .weather-card {
     padding: 2.5em;
   }
